# nocli

./: Dockerfile  MANIFEST.in  PRODUCTION_READINESS.md  README.md  Transcript2course  checkcpusage  cloud-run-job-example.md  course-creation-blueprint.md  deploy-gce-vm.md  deploy-ninth-arena-404220.md  gcp-authorization.md  lms  pyproject.toml  referencedashboard  referencevertexrefinement  referncegooglegen  refernececoursecoverimage  requirements.txt
src/course_engine/: __init__.py  app.py  cli.py  course_ai.py  course_sheet.py  engines.py  gcs.py  job_store.py  media.py  models.py  sources.py  transcriber.py  worker.py
src/course_engine/static/: app.js  index.html  styles.css
tests/: test_course_sheet.py
